--- a/core.conf
+++ b/core.conf
@@ -17,7 +17,7 @@
     "download_location_paths_list": [],
     "enabled_plugins": [
         "Label",
-        "Execute",
+        "Execute"
     ],
     "enc_in_policy": 1,
     "enc_level": 2,
@@ -30,11 +30,11 @@
         6881,
         6891
     ],
-    "listen_random_port": 50398,
+    "listen_random_port": 50181,
     "listen_reuse_port": true,
     "listen_use_sys_port": false,
     "lsd": true,
-    "max_active_downloading": 5,
+    "max_active_downloading": 10,
     "max_active_limit": 8,
     "max_active_seeding": 5,
     "max_connections_global": 200,
@@ -90,7 +90,7 @@
     "share_ratio_limit": 2.0,
     "shared": false,
     "stop_seed_at_ratio": true,
-    "stop_seed_ratio": 2.0,
+    "stop_seed_ratio": 1.5,
     "super_seeding": false,
     "torrentfiles_location": "/home/media/Downloads",
     "upnp": true,
